package cash.z.ecc.ui.screen.restore

/**
 * These are only used for automated testing.
 */
object RestoreTag {
    const val SEED_WORD_TEXT_FIELD = "seed_text_field"
    const val CHIP_LAYOUT = "chip_group"
    const val AUTOCOMPLETE_LAYOUT = "autocomplete_layout"
    const val AUTOCOMPLETE_ITEM = "autocomplete_item"
}
